--- a/index.html
+++ b/index.html
@@ -109,18 +109,18 @@
         <div class="container p-5 text-center text-baloo">
             <h1 class="display-3 text-concert-one text-green">Team</h1>
             <div>
-                <div class="card d-flex d-column flex-lg-row align-items-center justify-content-center p-3 bg-white my-5 shadow-black-10 border-white">
+                <div class="card d-flex flex-column flex-lg-row align-items-center justify-content-center p-3 bg-white my-5 shadow-black-10 border-white">
                     <img src="nfts/6.jpg" alt="" class="card-title rounded-circle border-3 border-dark">
-                    <div class="card-body text-center text-lg-center">
+                    <div class="card-body text-center text-lg-start">
                         <h3 class="fw-bold fs-1">Master Saurion</h3>
                         <p class="fs-4">Founder | Project Lead | Art Director</p>
                         <p class="lead">I'm a sociable person and have a contagious positive attitude towards life. I've been working in the videogames industry in games such as Dragonball, Gears of War and Sims. I also run Saga, a creative studio publishing iOS apps featured by Appple and managing a sci-fi series on TikTok with 2.9M followers.  </p>
                         <a href="https://twitter.com/mastersaurion"><i class="fab fa-twitter fa-2x text-dark"></i></a>
                     </div>
                 </div>
-                <div class="card d-flex d-column flex-lg-row align-items-center justify-content-center p-3 bg-white my-5 shadow-black-10 border-white">
+                <div class="card d-flex flex-column flex-lg-row align-items-center justify-content-center p-3 bg-white my-5 shadow-black-10 border-white">
                     <img src="nfts/7.jpg" alt="" class="card-title rounded-circle border-3 border-dark">
-                    <div class="card-body text-center text-lg-center">
+                    <div class="card-body text-center text-lg-start">
                         <h3 class="fw-bold fs-1">Reptilian Q.</h3>
                         <p class="fs-4">Founder | Artist | Project Manager | Tokenomics | Gamer</p>
                         <p class="lead">Creative technologist. Previously worked as a Product & Design Lead on iOS apps featured by Apple. Involved in the crypto space since 2016.</p>
